# curriculadora

./: .gitignore  Procfile  README.md  courses.db  locustfile.py  pyproject.toml  requirements.txt  sql_run.bat  sql_run.sh
.github/workflows/: reset_db.yml  reset_db2.yml  update_db.yml
CurriculadoraDB/: CurriculadoraDatabase.db  CurriculadoraScript.sql  Curriculadora_Reset_Script.sql  reset_db_script.sql
CurriculadoraDB/CurriculadoraVenv/Scripts/: activate  activate.bat
MyCurricVenv/Scripts/: activate  activate.bat
curriculadora/: README.md  pubspec.yaml
curriculadora/android/app/: build.gradle
curriculadora/lib/: curriculadora.dart  drawer.dart  main.dart
curriculadora/linux/: CMakeLists.txt  my_application.cc
curriculadora/test/: widget_test.dart
curriculadora/web/: index.html  manifest.json
curriculadora/windows/: CMakeLists.txt
data/: README.md  main.py  sql_run.bat  sql_run.sh
data/database/: courses.db  database.py
data/input_files/: programs.txt  programs_constants.py  programs_div.py  programs_metadata.py
data/logic/: availability.py  recommendation_scheduler.py  scheduler.py  semester.py
data/models/: constants.py  course.py  course_requisite_result.py  course_service.py  database.py  requisite_handler.py  student.py  test_req_handler.py
data/parser/: dependency_parser.py  parser_utils.py  program_parser.py  requisite_parser.py  test_req_parser.py
data/scraper/: log_utils.py  path_scraper.py  program_scraper.py  scrape_to_sql.py  ssh_scraper.py  web_scraper.py
web_db_querying/: app.py  db_queries.py
(+32 files in other folders)
