[project]
name = "data"
version = "0.1.0"
description = "Backend for automated curricular sequence generator."
authors = [
    {name = "BreannaGSegarra",email = "breanna.segarra@upr.edu"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "aiohttp (>=3.11.13,<4.0.0)",
    "paramiko (>=3.5.1,<4.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "beautifulsoup4 (==4.12.3)",
    "ply (>=3.11,<4.0)",
    "greenlet (>=3.1.1,<4.0.0)",
    "aiolimiter (>=1.2.1,<2.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "locust (>=2.37.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
